# AIdamShefter-v2

./: .cursorignore  .env.example  .gitignore  .python-version  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_reporter.py
.claude/skills/clean-slop/: SKILL.md
archive/: 01_agent.md
datalayer/: AGENTS.md  README.md  __init__.py  datalayer_design.md  tools.py
datalayer/cli/: __init__.py  main.py
datalayer/designs/: 00_architecture.md
datalayer/docs/: 01_datalayer.md  02_surfacing_names.md  03_picks.md  05_player_performances.md  06_sqlalchemy_migration.md  claude_summary.md  sleeperdl_design.md  sleeperdl_transaction_design.md
datalayer/sleeper_data/: __init__.py  config.py  sleeper_league_data.py
datalayer/tests/: conftest.py
reporter/: AGENTS.md  README.md  __init__.py  cli.py
reporter/agent/: __init__.py  clarify.py  config.py  policies.py  reporter_agent.py  research_log.py  schemas.py  specs.py  workflows.py
reporter/app/: config.py  runner.py
reporter/docs/: 01_agent.md  design.md  redesign_iterative_research.md  report_spec.md  spec_synthesis.md
reporter/evals/: __init__.py
reporter/prompts/: brief_building.md  draft_agent.md  drafting.md  research_agent.md  system_base.md  verification.md
reporter/scripts/: reporter  run_weekly_recap.py
reporter/src/: __init__.py  cli.py
reporter/tests/: __init__.py  conftest.py  test_policies.py  test_schemas.py  test_specs.py
reporter/tools/: __init__.py  registry.py  sleeper_tools.py
tests/datalayer/: conftest.py
tests/integration/: test_cli.py  test_week_override.py
(+81 files in other folders)
